# trading_bot_rs

./: .gitignore  Cargo.toml  Init.bat  Kraken_fees.csv  README.md  bot_overview.markdown  clean_up.bat  config.toml  rebuild_maker.bat  start_bot.bat  start_server.bat
Data/: positions.csv  trades.csv
data/: Trades Data.csv  positions.csv  positionsFirst Run.csv  positionsSecond Run.csv  positionsThird Run.csv  trades.csv  tradesFirst Run.csv  tradesSecond Run.csv  tradesThird Run.csv
log/: cmd_log.txt  error_log.txt
report/: trade_report_2026-02-15_13-26.txt  trade_report_2026-02-15_22-31.txt  trade_report_2026-02-16_01-38.txt  trade_report_2026-02-16_14-35.txt  trade_report_2026-02-17_00-00.txt  trade_report_2026-02-17_17-04.txt  trade_report_2026-02-18_01-26.txt  trade_report_2026-02-19_01-22.txt  trade_report_2026-02-19_16-22.txt  trade_report_2026-02-20_01-28.txt  trade_report_2026-02-20_11-10.txt  trade_report_2026-02-20_17-44.txt  trade_report_2026-02-21_08-49.txt  trade_report_2026-02-22_09-02.txt  trade_report_2026-02-22_12-09.txt  trade_report_2026-02-23_00-15.txt  trade_report_2026-02-23_00-27.txt  trade_report_2026-02-23_09-50.txt
src/: actors.rs  api.rs  config.rs  dal.rs  db.rs  fetch.rs  indicators.rs  main.rs  monitor.rs  processing.rs  statemanager.rs  stop.rs  trading.rs  utils.rs  websocket.rs
